# ppz-logalyzer

./: .env.example  .env.production  .gitignore  API_TODO.md  BACKEND_API_IMPLEMENTATION.md  DEPLOYMENT.md  DEVELOPMENT.md  README.md  TASK_LIST.md  docker-compose.prod.yml  docker-compose.yml  frontend-design-tasks.md  frontend-plan-chronological.md  immediate-tasks.md  prd.txt  start_backend.sh
backend/: Dockerfile
backend/api/: Cargo.toml  verify_schema.sh
backend/api/migrations/: 20250815000001_initial_schema.sql  20250815000002_log_files.sql  20250815000003_analysis.sql  20250818000001_improve_file_pairing.sql  20250818000002_fix_session_token_length.sql  20250818000003_remove_full_name.sql
backend/api/src/: lib.rs  routes.rs
backend/api/src/analysis/: service.rs
backend/api/src/auth/: middleware.rs  mod.rs  service.rs
backend/api/src/db/: mod.rs
backend/api/src/models/: analysis.rs  audit.rs  file.rs  mod.rs  session.rs  user.rs
backend/api/src/processing/: mod.rs
backend/api/src/schema/: mod.rs
backend/api/src/telemetry/: mod.rs
database/init/: 01-init.sql
docs/: DEVELOPMENT.md  TASK1_COMPLETION_SUMMARY.md
frontend/: Dockerfile  FRONTEND_COMPLETION_REPORT.md  FRONTEND_PROGRESS.md  next.config.ts  package.json  tsconfig.json  ui-plan.md
frontend/src/app/: error.tsx  layout.tsx  loading.tsx  not-found.tsx  page-test.tsx  page.tsx  test-page.tsx
frontend/src/app/analysis/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/sessions/: page.tsx
frontend/src/components/: DashboardPage.tsx  FileUpload.tsx  Navigation.tsx  SessionsPage.tsx
frontend/src/lib/: auth.ts  dateUtils.ts  files.ts  mock-data.ts  sessions.ts
frontend/src/types/: api.ts
monitoring/: prometheus.yml
(+36 files in other folders)
