[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
axum = { version = "0.8.4", features = ["macros", "ws"] }
blake3 = "1.8.2"
notify = "8"
serde = { version = "1.0.219", features = ["derive"] }
serde-xml-rs = "0.8"
serde_json = "1.0.142"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros"] }
thiserror = "2.0.14"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
