[package]
name = "ppz-logalyzer-api"
version = "0.1.0"
edition = "2024"

[dependencies]
# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Web framework
axum = { version = "0.8", features = ["multipart"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.8"
regex = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "postgres", "macros", "chrono", "uuid", "migrate"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
rust_decimal = { version = "1.0", features = ["serde"] }

# Environment variables
dotenvy = "0.15"

# File system utilities
blake3 = "1.5"
notify = "8.0"

# Date and time
chrono = { version = "0.4", features = ["serde"] }
